# letterboxarr

./: .gitignore  Dockerfile  README.md  config.example.yml  lib_api.py  lib_config.py  lib_letterboxd.py  lib_radarr.py  lib_sync.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: config.example.yml  docker-compose.yml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: ConfigPage.tsx  DashboardPage.tsx  LoginPage.tsx  MoviesPage.tsx  WatchItemsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
