[project]
name = "letterboxarr"
version = "1.0.0"
description = "Automatically sync your Letterboxd watchlist to your Radarr instance"
requires-python = ">=3.9"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "pyyaml==6.0.1",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.19",
    "aiofiles==23.2.1",
]
